parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> program
Rule 2     program -> Declaration program
Rule 3     program -> Fprintf program
Rule 4     program -> For program End
Rule 5     program -> While program End
Rule 6     program -> If program End
Rule 7     program -> <empty>
Rule 8     Operator -> EQUALS
Rule 9     Operator -> NOTEQUALS
Rule 10    Operator -> GREATER_THAN_OR_EQUAL_TO
Rule 11    Operator -> LESSER_THAN_OR_EQUAL_TO
Rule 12    Operator -> GREATER_THAN
Rule 13    Operator -> LESSER_THAN
Rule 14    Operator -> AND
Rule 15    Operator -> OR
Rule 16    Operator -> PLUS
Rule 17    Operator -> MINUS
Rule 18    Operator -> MULTIPLY
Rule 19    Operator -> DIVIDE
Rule 20    Operator -> POW
Rule 21    Declaration -> ID ASSIGN exp SEMICOLON
Rule 22    exp -> exp Operator exp
Rule 23    exp -> L_BRACES exp R_BRACES
Rule 24    exp -> Operand
Rule 25    exp -> NOT exp
Rule 26    forCondition -> ID ASSIGN NUMBER COLON NUMBER COLON NUMBER
Rule 27    forCondition -> ID ASSIGN NUMBER COLON NUMBER
Rule 28    array -> SQR_LBRACE vector SQR_RBRACE
Rule 29    vector -> rowvector
Rule 30    vector -> colvector
Rule 31    rowvector -> Operand COMMA rowvector
Rule 32    rowvector -> Operand
Rule 33    colvector -> Operand SEMICOLON colvector
Rule 34    colvector -> Operand
Rule 35    End -> end
Rule 36    If -> if checkCondition program Block
Rule 37    Block -> elseif checkCondition program else program
Rule 38    Block -> else program
Rule 39    Block -> elseif checkCondition program Block
Rule 40    Fprintf -> fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
Rule 41    Fprintf -> fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
Rule 42    content -> ID content
Rule 43    content -> PLACEHOLDER content
Rule 44    content -> <empty>
Rule 45    For -> for L_BRACES forCondition R_BRACES program
Rule 46    While -> while checkCondition program
Rule 47    checkCondition -> L_BRACES exp R_BRACES
Rule 48    Operand -> NUMBER
Rule 49    Operand -> ID
Rule 50    Operand -> array

Terminals, with rules where they appear

AND                  : 14
ASSIGN               : 21 26 27
COLON                : 26 26 27
COMMA                : 31 40
DIVIDE               : 19
EQUALS               : 8
GREATER_THAN         : 12
GREATER_THAN_OR_EQUAL_TO : 10
ID                   : 21 26 27 42 49
LESSER_THAN          : 13
LESSER_THAN_OR_EQUAL_TO : 11
L_BRACES             : 23 40 41 45 47
MINUS                : 17
MULTIPLY             : 18
NOT                  : 25
NOTEQUALS            : 9
NUMBER               : 26 26 26 27 27 48
OR                   : 15
PLACEHOLDER          : 43
PLUS                 : 16
POW                  : 20
QUOTE                : 40 40 41 41
R_BRACES             : 23 40 41 45 47
SEMICOLON            : 21 33 40 41
SQR_LBRACE           : 28
SQR_RBRACE           : 28
else                 : 37 38
elseif               : 37 39
end                  : 35
error                : 
for                  : 45
fprintf              : 40 41
if                   : 36
while                : 46

Nonterminals, with rules where they appear

Block                : 36 39
Declaration          : 2
End                  : 4 5 6
For                  : 4
Fprintf              : 3
If                   : 6
Operand              : 24 31 32 33 34
Operator             : 22
While                : 5
array                : 50
checkCondition       : 36 37 39 46
colvector            : 30 33
content              : 40 41 42 43
exp                  : 21 22 22 23 25 40 47
forCondition         : 45
main                 : 0
program              : 1 2 3 4 5 6 36 37 37 38 39 45 46
rowvector            : 29 31
vector               : 28

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . program
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

    $end            reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

    main                           shift and go to state 1
    program                        shift and go to state 2
    Declaration                    shift and go to state 3
    Fprintf                        shift and go to state 4
    For                            shift and go to state 5
    While                          shift and go to state 6
    If                             shift and go to state 7

state 1

    (0) S' -> main .



state 2

    (1) main -> program .

    $end            reduce using rule 1 (main -> program .)


state 3

    (2) program -> Declaration . program
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for fprintf resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for while resolved as shift
  ! shift/reduce conflict for if resolved as shift
    $end            reduce using rule 7 (program -> .)
    end             reduce using rule 7 (program -> .)
    elseif          reduce using rule 7 (program -> .)
    else            reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

  ! ID              [ reduce using rule 7 (program -> .) ]
  ! fprintf         [ reduce using rule 7 (program -> .) ]
  ! for             [ reduce using rule 7 (program -> .) ]
  ! while           [ reduce using rule 7 (program -> .) ]
  ! if              [ reduce using rule 7 (program -> .) ]

    Declaration                    shift and go to state 3
    program                        shift and go to state 13
    Fprintf                        shift and go to state 4
    For                            shift and go to state 5
    While                          shift and go to state 6
    If                             shift and go to state 7

state 4

    (3) program -> Fprintf . program
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for fprintf resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for while resolved as shift
  ! shift/reduce conflict for if resolved as shift
    $end            reduce using rule 7 (program -> .)
    end             reduce using rule 7 (program -> .)
    elseif          reduce using rule 7 (program -> .)
    else            reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

  ! ID              [ reduce using rule 7 (program -> .) ]
  ! fprintf         [ reduce using rule 7 (program -> .) ]
  ! for             [ reduce using rule 7 (program -> .) ]
  ! while           [ reduce using rule 7 (program -> .) ]
  ! if              [ reduce using rule 7 (program -> .) ]

    Fprintf                        shift and go to state 4
    program                        shift and go to state 14
    Declaration                    shift and go to state 3
    For                            shift and go to state 5
    While                          shift and go to state 6
    If                             shift and go to state 7

state 5

    (4) program -> For . program End
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

    end             reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

    For                            shift and go to state 5
    program                        shift and go to state 15
    Declaration                    shift and go to state 3
    Fprintf                        shift and go to state 4
    While                          shift and go to state 6
    If                             shift and go to state 7

state 6

    (5) program -> While . program End
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

    end             reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

    While                          shift and go to state 6
    program                        shift and go to state 16
    Declaration                    shift and go to state 3
    Fprintf                        shift and go to state 4
    For                            shift and go to state 5
    If                             shift and go to state 7

state 7

    (6) program -> If . program End
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

    end             reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

    If                             shift and go to state 7
    program                        shift and go to state 17
    Declaration                    shift and go to state 3
    Fprintf                        shift and go to state 4
    For                            shift and go to state 5
    While                          shift and go to state 6

state 8

    (21) Declaration -> ID . ASSIGN exp SEMICOLON

    ASSIGN          shift and go to state 18


state 9

    (40) Fprintf -> fprintf . L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> fprintf . L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON

    L_BRACES        shift and go to state 19


state 10

    (45) For -> for . L_BRACES forCondition R_BRACES program

    L_BRACES        shift and go to state 20


state 11

    (46) While -> while . checkCondition program
    (47) checkCondition -> . L_BRACES exp R_BRACES

    L_BRACES        shift and go to state 22

    checkCondition                 shift and go to state 21

state 12

    (36) If -> if . checkCondition program Block
    (47) checkCondition -> . L_BRACES exp R_BRACES

    L_BRACES        shift and go to state 22

    checkCondition                 shift and go to state 23

state 13

    (2) program -> Declaration program .

    $end            reduce using rule 2 (program -> Declaration program .)
    end             reduce using rule 2 (program -> Declaration program .)
    ID              reduce using rule 2 (program -> Declaration program .)
    fprintf         reduce using rule 2 (program -> Declaration program .)
    for             reduce using rule 2 (program -> Declaration program .)
    while           reduce using rule 2 (program -> Declaration program .)
    if              reduce using rule 2 (program -> Declaration program .)
    elseif          reduce using rule 2 (program -> Declaration program .)
    else            reduce using rule 2 (program -> Declaration program .)


state 14

    (3) program -> Fprintf program .

    $end            reduce using rule 3 (program -> Fprintf program .)
    end             reduce using rule 3 (program -> Fprintf program .)
    ID              reduce using rule 3 (program -> Fprintf program .)
    fprintf         reduce using rule 3 (program -> Fprintf program .)
    for             reduce using rule 3 (program -> Fprintf program .)
    while           reduce using rule 3 (program -> Fprintf program .)
    if              reduce using rule 3 (program -> Fprintf program .)
    elseif          reduce using rule 3 (program -> Fprintf program .)
    else            reduce using rule 3 (program -> Fprintf program .)


state 15

    (4) program -> For program . End
    (35) End -> . end

    end             shift and go to state 25

    End                            shift and go to state 24

state 16

    (5) program -> While program . End
    (35) End -> . end

    end             shift and go to state 25

    End                            shift and go to state 26

state 17

    (6) program -> If program . End
    (35) End -> . end

    end             shift and go to state 25

    End                            shift and go to state 27

state 18

    (21) Declaration -> ID ASSIGN . exp SEMICOLON
    (22) exp -> . exp Operator exp
    (23) exp -> . L_BRACES exp R_BRACES
    (24) exp -> . Operand
    (25) exp -> . NOT exp
    (48) Operand -> . NUMBER
    (49) Operand -> . ID
    (50) Operand -> . array
    (28) array -> . SQR_LBRACE vector SQR_RBRACE

    L_BRACES        shift and go to state 30
    NOT             shift and go to state 32
    NUMBER          shift and go to state 33
    ID              shift and go to state 28
    SQR_LBRACE      shift and go to state 35

    exp                            shift and go to state 29
    Operand                        shift and go to state 31
    array                          shift and go to state 34

state 19

    (40) Fprintf -> fprintf L_BRACES . QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> fprintf L_BRACES . QUOTE content QUOTE R_BRACES SEMICOLON

    QUOTE           shift and go to state 36


state 20

    (45) For -> for L_BRACES . forCondition R_BRACES program
    (26) forCondition -> . ID ASSIGN NUMBER COLON NUMBER COLON NUMBER
    (27) forCondition -> . ID ASSIGN NUMBER COLON NUMBER

    ID              shift and go to state 38

    forCondition                   shift and go to state 37

state 21

    (46) While -> while checkCondition . program
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for fprintf resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for while resolved as shift
  ! shift/reduce conflict for if resolved as shift
    end             reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

  ! ID              [ reduce using rule 7 (program -> .) ]
  ! fprintf         [ reduce using rule 7 (program -> .) ]
  ! for             [ reduce using rule 7 (program -> .) ]
  ! while           [ reduce using rule 7 (program -> .) ]
  ! if              [ reduce using rule 7 (program -> .) ]

    program                        shift and go to state 39
    Declaration                    shift and go to state 3
    Fprintf                        shift and go to state 4
    For                            shift and go to state 5
    While                          shift and go to state 6
    If                             shift and go to state 7

state 22

    (47) checkCondition -> L_BRACES . exp R_BRACES
    (22) exp -> . exp Operator exp
    (23) exp -> . L_BRACES exp R_BRACES
    (24) exp -> . Operand
    (25) exp -> . NOT exp
    (48) Operand -> . NUMBER
    (49) Operand -> . ID
    (50) Operand -> . array
    (28) array -> . SQR_LBRACE vector SQR_RBRACE

    L_BRACES        shift and go to state 30
    NOT             shift and go to state 32
    NUMBER          shift and go to state 33
    ID              shift and go to state 28
    SQR_LBRACE      shift and go to state 35

    exp                            shift and go to state 40
    Operand                        shift and go to state 31
    array                          shift and go to state 34

state 23

    (36) If -> if checkCondition . program Block
    (2) program -> . Declaration program
    (3) program -> . Fprintf program
    (4) program -> . For program End
    (5) program -> . While program End
    (6) program -> . If program End
    (7) program -> .
    (21) Declaration -> . ID ASSIGN exp SEMICOLON
    (40) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE COMMA exp R_BRACES SEMICOLON
    (41) Fprintf -> . fprintf L_BRACES QUOTE content QUOTE R_BRACES SEMICOLON
    (45) For -> . for L_BRACES forCondition R_BRACES program
    (46) While -> . while checkCondition program
    (36) If -> . if checkCondition program Block

    elseif          reduce using rule 7 (program -> .)
    else            reduce using rule 7 (program -> .)
    ID              shift and go to state 8
    fprintf         shift and go to state 9
    for             shift and go to state 10
    while           shift and go to state 11
    if              shift and go to state 12

    program                        shift and go to state 41
    Declaration                    shift and go to state 3
    Fprintf                        shift and go to state 4
    For                            shift and go to state 5
    While                          shift and go to state 6
    If                             shift and go to state 7

state 24

    (4) program -> For program End .

    $end            reduce using rule 4 (program -> For program End .)
    end             reduce using rule 4 (program -> For program End .)
    ID              reduce using rule 4 (program -> For program End .)
    fprintf         reduce using rule 4 (program -> For program End .)
    for             reduce using rule 4 (program -> For program End .)
    while           reduce using rule 4 (program -> For program End .)
    if              reduce using rule 4 (program -> For program End .)
    elseif          reduce using rule 4 (program -> For program End .)
    else            reduce using rule 4 (program -> For program End .)


state 25

    (35) End -> end .

    $end            reduce using rule 35 (End -> end .)
    end             reduce using rule 35 (End -> end .)
    ID              reduce using rule 35 (End -> end .)
    fprintf         reduce using rule 35 (End -> end .)
    for             reduce using rule 35 (End -> end .)
    while           reduce using rule 35 (End -> end .)
    if              reduce using rule 35 (End -> end .)
    elseif          reduce using rule 35 (End -> end .)
    else            reduce using rule 35 (End -> end .)


state 26

    (5) program -> While program End .

    $end            reduce using rule 5 (program -> While program End .)
    end             reduce using rule 5 (program -> While program End .)
    ID              reduce using rule 5 (program -> While program End .)
    fprintf         reduce using rule 5 (program -> While program End .)
    for             reduce using rule 5 (program -> While program End .)
    while           reduce using rule 5 (program -> While program End .)
    if              reduce using rule 5 (program -> While program End .)
    elseif          reduce using rule 5 (program -> While program End .)
    else            reduce using rule 5 (program -> While program End .)


state 27

    (6) program -> If program End .

    $end            reduce using rule 6 (program -> If program End .)
    end             reduce using rule 6 (program -> If program End .)
    ID              reduce using rule 6 (program -> If program End .)
    fprintf         reduce using rule 6 (program -> If program End .)
    for             reduce using rule 6 (program -> If program End .)
    while           reduce using rule 6 (program -> If program End .)
    if              reduce using rule 6 (program -> If program End .)
    elseif          reduce using rule 6 (program -> If program End .)
    else            reduce using rule 6 (program -> If program End .)


state 28

    (49) Operand -> ID .

    SEMICOLON       reduce using rule 49 (Operand -> ID .)
    EQUALS          reduce using rule 49 (Operand -> ID .)
    NOTEQUALS       reduce using rule 49 (Operand -> ID .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 49 (Operand -> ID .)
    LESSER_THAN_OR_EQUAL_TO reduce using rule 49 (Operand -> ID .)
    GREATER_THAN    reduce using rule 49 (Operand -> ID .)
    LESSER_THAN     reduce using rule 49 (Operand -> ID .)
    AND             reduce using rule 49 (Operand -> ID .)
    OR              reduce using rule 49 (Operand -> ID .)
    PLUS            reduce using rule 49 (Operand -> ID .)
    MINUS           reduce using rule 49 (Operand -> ID .)
    MULTIPLY        reduce using rule 49 (Operand -> ID .)
    DIVIDE          reduce using rule 49 (Operand -> ID .)
    POW             reduce using rule 49 (Operand -> ID .)
    R_BRACES        reduce using rule 49 (Operand -> ID .)
    COMMA           reduce using rule 49 (Operand -> ID .)
    SQR_RBRACE      reduce using rule 49 (Operand -> ID .)


state 29

    (21) Declaration -> ID ASSIGN exp . SEMICOLON
    (22) exp -> exp . Operator exp
    (8) Operator -> . EQUALS
    (9) Operator -> . NOTEQUALS
    (10) Operator -> . GREATER_THAN_OR_EQUAL_TO
    (11) Operator -> . LESSER_THAN_OR_EQUAL_TO
    (12) Operator -> . GREATER_THAN
    (13) Operator -> . LESSER_THAN
    (14) Operator -> . AND
    (15) Operator -> . OR
    (16) Operator -> . PLUS
    (17) Operator -> . MINUS
    (18) Operator -> . MULTIPLY
    (19) Operator -> . DIVIDE
    (20) Operator -> . POW

    SEMICOLON       shift and go to state 42
    EQUALS          shift and go to state 44
    NOTEQUALS       shift and go to state 45
    GREATER_THAN_OR_EQUAL_TO shift and go to state 46
    LESSER_THAN_OR_EQUAL_TO shift and go to state 47
    GREATER_THAN    shift and go to state 48
    LESSER_THAN     shift and go to state 49
    AND             shift and go to state 50
    OR              shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    MULTIPLY        shift and go to state 54
    DIVIDE          shift and go to state 55
    POW             shift and go to state 56

    Operator                       shift and go to state 43

state 30

    (23) exp -> L_BRACES . exp R_BRACES
    (22) exp -> . exp Operator exp
    (23) exp -> . L_BRACES exp R_BRACES
    (24) exp -> . Operand
    (25) exp -> . NOT exp
    (48) Operand -> . NUMBER
    (49) Operand -> . ID
    (50) Operand -> . array
    (28) array -> . SQR_LBRACE vector SQR_RBRACE

    L_BRACES        shift and go to state 30
    NOT             shift and go to state 32
    NUMBER          shift and go to state 33
    ID              shift and go to state 28
    SQR_LBRACE      shift and go to state 35

    exp                            shift and go to state 57
    Operand                        shift and go to state 31
    array                          shift and go to state 34

state 31

    (24) exp -> Operand .

    SEMICOLON       reduce using rule 24 (exp -> Operand .)
    EQUALS          reduce using rule 24 (exp -> Operand .)
    NOTEQUALS       reduce using rule 24 (exp -> Operand .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 24 (exp -> Operand .)
    LESSER_THAN_OR_EQUAL_TO reduce using rule 24 (exp -> Operand .)
    GREATER_THAN    reduce using rule 24 (exp -> Operand .)
    LESSER_THAN     reduce using rule 24 (exp -> Operand .)
    AND             reduce using rule 24 (exp -> Operand .)
    OR              reduce using rule 24 (exp -> Operand .)
    PLUS            reduce using rule 24 (exp -> Operand .)
    MINUS           reduce using rule 24 (exp -> Operand .)
    MULTIPLY        reduce using rule 24 (exp -> Operand .)
    DIVIDE          reduce using rule 24 (exp -> Operand .)
    POW             reduce using rule 24 (exp -> Operand .)
    R_BRACES        reduce using rule 24 (exp -> Operand .)


state 32

    (25) exp -> NOT . exp
    (22) exp -> . exp Operator exp
    (23) exp -> . L_BRACES exp R_BRACES
    (24) exp -> . Operand
    (25) exp -> . NOT exp
    (48) Operand -> . NUMBER
    (49) Operand -> . ID
    (50) Operand -> . array
    (28) array -> . SQR_LBRACE vector SQR_RBRACE

    L_BRACES        shift and go to state 30
    NOT             shift and go to state 32
    NUMBER          shift and go to state 33
    ID              shift and go to state 28
    SQR_LBRACE      shift and go to state 35

    exp                            shift and go to state 58
    Operand                        shift and go to state 31
    array                          shift and go to state 34

state 33

    (48) Operand -> NUMBER .

    SEMICOLON       reduce using rule 48 (Operand -> NUMBER .)
    EQUALS          reduce using rule 48 (Operand -> NUMBER .)
    NOTEQUALS       reduce using rule 48 (Operand -> NUMBER .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 48 (Operand -> NUMBER .)
    LESSER_THAN_OR_EQUAL_TO reduce using rule 48 (Operand -> NUMBER .)
    GREATER_THAN    reduce using rule 48 (Operand -> NUMBER .)
    LESSER_THAN     reduce using rule 48 (Operand -> NUMBER .)
    AND             reduce using rule 48 (Operand -> NUMBER .)
    OR              reduce using rule 48 (Operand -> NUMBER .)
    PLUS            reduce using rule 48 (Operand -> NUMBER .)
    MINUS           reduce using rule 48 (Operand -> NUMBER .)
    MULTIPLY        reduce using rule 48 (Operand -> NUMBER .)
    DIVIDE          reduce using rule 48 (Operand -> NUMBER .)
    POW             reduce using rule 48 (Operand -> NUMBER .)
    R_BRACES        reduce using rule 48 (Operand -> NUMBER .)
    COMMA           reduce using rule 48 (Operand -> NUMBER .)
    SQR_RBRACE      reduce using rule 48 (Operand -> NUMBER .)


state 34

    (50) Operand -> array .

    SEMICOLON       reduce using rule 50 (Operand -> array .)
    EQUALS          reduce using rule 50 (Operand -> array .)
    NOTEQUALS       reduce using rule 50 (Operand -> array .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 50 (Operand -> array .)
    LESSER_THAN_OR_EQUAL_TO reduce using rule 50 (Operand -> array .)
    GREATER_THAN    reduce using rule 50 (Operand -> array .)
    LESSER_THAN     reduce using rule 50 (Operand -> array .)
    AND             reduce using rule 50 (Operand -> array .)
    OR              reduce using rule 50 (Operand -> array .)
    PLUS            reduce using rule 50 (Operand -> array .)
    MINUS           reduce using rule 50 (Operand -> array .)
    MULTIPLY        reduce using rule 50 (Operand -> array .)
    DIVIDE          reduce using rule 50 (Operand -> array .)
    POW             reduce using rule 50 (Operand -> array .)
    R_BRACES        reduce using rule 50 (Operand -> array .)
    COMMA           reduce using rule 50 (Operand -> array .)
    SQR_RBRACE      reduce using rule 50 (Operand -> array .)


state 35
